Closed
Bug 906372
Opened 11 years ago
Closed 11 years ago
crash in js::WorkerThreadState::finishParseTaskForScript(JSScript*)
Categories
(Core :: General, defect)
Tracking
()
RESOLVED
FIXED
mozilla26
People
(Reporter: alice0775, Assigned: bhackett1024)
References
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
2.26 KB,
patch
|
billm
:
review+
|
Details | Diff | Splinter Review |
This bug was filed from the Socorro interface and is
report bp-da9ab953-b30a-47e8-a137-1fcee2130817 .
=============================================================
Steps To Reproduce:
1. Install https://addons.mozilla.org/en-US/firefox/addon/easiest-youtube-video-downl/
2. Restart
Actual Results:
Browser crashes at start up
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/d52251e9123c
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130815125919
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/b5e301863e69
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130815141517
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=d52251e9123c&tochange=b5e301863e69
Regressed by:
b5e301863e69 Brian Hackett — Bug 897655 - Use off thread parsing when loading scripts from XUL documents, r=billm,bz,luke.
![]() |
Reporter | |
Comment 1•11 years ago
|
||
OS: Windows 7 → All
Assignee | ||
Comment 2•11 years ago
|
||
The very first thing WorkerThreadState::finishParseTaskForScript does is dereference its script parameter, which will be NULL if the parse failed.
Assignee: nobody → bhackett1024
Attachment #791752 -
Flags: review?(wmccloskey)
Comment on attachment 791752 [details] [diff] [review]
patch
Review of attachment 791752 [details] [diff] [review]:
-----------------------------------------------------------------
Could you look into ways of writing tests for some of these bugs that are popping up? It seems like this one should be relatively easy to test with the right harness. I'm not sure about the other ones.
Attachment #791752 -
Flags: review?(wmccloskey) → review+
Assignee | ||
Comment 4•11 years ago
|
||
I'll ask around next week about writing a mochitest for this.
https://hg.mozilla.org/integration/mozilla-inbound/rev/4649bb1224f6
Flags: in-testsuite-
Comment 5•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
You need to log in
before you can comment on or make changes to this bug.
Description
•