Bug 906372 - Fix NULL deref when finishing off thread parse tasks which failed, r=billm.