js/src/jsapi.cpp
@@ -4893,7 +4893,7 @@ JS::FinishOffThreadScript(JSRuntime *rt, JSScript *script)
 {
 #if defined(JS_THREADSAFE) && defined(JS_ION)
     JS_ASSERT(CurrentThreadCanAccessRuntime(rt));
-    rt->workerThreadState->finishParseTaskForScript(script);
+    rt->workerThreadState->finishParseTaskForScript(rt, script);
 #else
     MOZ_ASSUME_UNREACHABLE("Off thread compilation is only available with JS_ION");
 #endif
